--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <main>        
         <section class="cajaIntroduccion">
             <div class="cajaTextoIntroduccion">
-            <h1>ENTRENAMIENTO BIOLÓGICO EVOLUTIVO - POR QUÉ ES MEJOR</h1>
-            <p> <strong> El entrenamiento biológico evolutivo surge de la observación del movimiento en poblaciones no alcanzadas por la civilización, en los mejores deportistas de la historia, y en la optimización biológica.</strong><p></p>              
-            <p>Este tipo de entrenamiento es diferente y supera al tradicional puesto que devuelve la verdadera salud al individuo desde lo más profundo, genera una biomecánica eficiente, mayor autonomía y confianza en la propia biología, y tiene un impacto natural en nuestra mejora estética... </p> 
+            <h1> ENTRENAMIENTO BIOLÓGICO EVOLUTIVO: POR QUÉ ES MEJOR</h1>
+            <p>El <strong> entrenamiento biológico evolutivo</strong> surge de la observación del movimiento en <strong> poblaciones no alcanzadas por la civilización</strong>, en <strong> los mejores deportistas de la historia</strong>, y en la <strong> optimización biológica.</strong></p>              
+            <p>Este tipo de entrenamiento es diferente y supera al tradicional puesto que devuelve la verdadera salud al individuo desde lo más profundo, genera una <strong> biomecánica eficiente</strong>, mayor autonomía y confianza en la propia biología, y tiene un impacto natural en nuestra <strong> mejora estética</strong>... </p> 
             </div>
             <div class="divCalltoaction"><a  href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Leer más</h3></a>
             </div>
@@ -84,20 +84,20 @@
                 <div class="proximoCurso">
                     <h4>ANIMAL FLOW - BUENOS AIRES</h4>
                     <div>
-                        <img src="./img/fotoCursoAnimal.jpg" alt="Curso de Animal Flow - Buenos Aires" width="350" height="250">
+                        <img src="./img/fotoCursoAnimal - copia.jpg" alt="Curso de Animal Flow - Buenos Aires" width="350" height="250">
                     </div>    
                     <div class="divCalltoaction"><a  href="./pages/animalflow.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>                             
                 </div> 
                 <div class="proximoCurso">
                     <h4>NUTRICIÓN - BUENOS AIRES</h4>
-                    <img src="./img/cursoNutricion.jpg" alt="Curso de Nutrición - Buenos Aires" width="350" height="250">
+                    <img src="./img/cursoNutricion - copia.jpg" alt="Curso de Nutrición - Buenos Aires" width="350" height="250">
                     <div class="divCalltoaction"><a  href="./pages/nutricion.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>                       
                 </div>  
                 <div class="proximoCurso">
                     <h4>KETTLEBELLS - BUENOS AIRES</h4>
-                    <img src="./img/cursoPesasRusasBuenosAires3.jpg" alt="Curso de Pesas Rusas - Buenos Aires" width="350" height="250">
+                    <img src="./img/cursoPesasRusasBuenosAires3 - copia.jpg" alt="Curso de Pesas Rusas - Buenos Aires" width="350" height="250">
                     <div class="divCalltoaction"><a  href="./pages/kettlebells.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>            
                 </div>      
@@ -134,9 +134,9 @@
             </div>
             <div class="cajaTextoPosteo">
                     <h5>PIES DESCALZOS PARA ENTRENAR</h5>
-                    <p> <strong>El calzado moderno “nos protege”, pero al mismo tiempo nos atrofia una gran cantidad de músculos de los pies, lo que conduce por un camino biomecánicamente erróneo en el resto del cuerpo.
-                    </strong><p>
-                    <p>El entrenamiento sin calzado, sobre todo en superficies naturales con desniveles, frío/calor, y en contacto con la tierra, el pasto, el sol, la arena, agrega la complejidad de obligar al cuerpo a tener que posicionarse de una manera eficiente, y aprender estas posibilidades espontáneas...
+                    <p>El  <strong>calzado moderno</strong> “nos protege”, pero al mismo tiempo nos atrofia una gran cantidad de músculos de los pies, lo que conduce por un <strong> camino biomecánicamente erróneo </strong>en el resto del cuerpo.
+                    <p>
+                    <p>El <strong> entrenamiento sin calzado</strong>, sobre todo en superficies naturales con desniveles, frío/calor, y en contacto con la tierra, el pasto, el sol, la arena, agrega la complejidad de obligar al cuerpo a tener que <strong>posicionarse de una manera  eficiente</strong>, y aprender estas posibilidades espontáneas...
                     </p>        
             </div>                
             <div class="divCalltoaction"><a  href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Ir a BLOG</h3></a>
