--- a/pages/about.html
+++ b/pages/about.html
@@ -70,11 +70,17 @@
     <main>
         <section class="mainAbout">
             <div class="cajaTextoAbout">
-                <h1>QUÉ ES NATURALFLOWMC</h1>
-                <p> <strong> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ab possimus hic debitis, neque accusantium aperiam sunt fugit autem at.</strong></p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p> 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>
+                <h1>QUÉ ES NATURALFLOWMC</h1>                
+                <p>Naturalflowmc nace de la necesidad de buscar una respuesta a las problemáticas actuales de la población, en cuanto a salud y específicamente en cuanto a movimiento. Somos un grupo de profesionales que habiendo encontrado la misma solución a dichas inquietudes, nos unimos en este hermoso proyecto. Nuestro objetivo principal es, y habiendo encontrado en esto nuestro propósito de vida,  <strong>enseñar a nuestros alumnos a creer en su propia biología y potenciarla naturalmente</strong>, de manera inteligente y sostenible en el tiempo.</p>
+                <p>Somos un equipo de profesionales que si bien nos formamos en el ámbito académico universitario, fuimos más allá y <strong> buscamos continuamente la VERDAD</strong>. En Naturalflowmc no encontrarás la pastilla mágica que te solucionará los problemas, aquí te enseñamos que en tu propia biología está la curación, pero para ello trabajaremos duro sentando bases estructurales en tu cuerpo, tu mente, y tu nutrición (en el amplio sentido de la palabra), y te ayudaremos a potenciar tu fuerza, destreza, coordinación, y belleza natural.
+                </p> 
+                <p>Nuestro equipo además ha establecido sólidos nexos con otros profesionales de la salud que siempre buscan la verdad, por lo que <strong>contamos con  capacitaciones donde participan los mejores referentes en cuanto a movimiento y nutrición</strong>.
+                </p>
+                <p>Te acompañamos a lograr tu mejor versión.
+                </p>
+                <p>¡Te esperamos!
+                </p>
+                <p>Equipo Naturalflowmc </p>
             </div>
             <div>
                 <div class="divCalltoaction"><a  href="../pages/contacto.html"><h3 class="calltoaction">CONTÁCTANOS</h3></a>
