--- a/pages/animalflow.html
+++ b/pages/animalflow.html
@@ -70,8 +70,7 @@
         <section class="cajaCurso">
             <div>
                 <h1>CURSO DE ANIMAL FLOW - BUENOS AIRES </h1>
-                <p><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis quasi voluptatibus minus placeat obcaecati, magnam quo recusandae voluptatum omnis quos.</strong></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatibus perspiciatis deserunt ratione eius, reprehenderit expedita, numquam dolor accusantium dicta officia a aperiam repellendus laudantium minus quia! Veritatis, fugiat voluptas id numquam, saepe nobis dolores quaerat neque molestias, rerum aperiam. Asperiores voluptatem unde incidunt a? Quis atque harum ad nam voluptate perferendis, perspiciatis non aliquam exercitationem laborum porro, voluptatem quos.</p>
+                <p><strong>Animal Flow</strong> es un programa de movimiento que combina elementos de diferentes disciplinas de <strong> peso corporal</strong> como el breakdance, el parkour, la gimnasia y el equilibrio de manos con el <strong> patrón de locomoción animal</strong>. Los movimientos se pueden realizar solos o combinar en "flujos" donde se unen diferentes elementos en una cadena continua de energía y movimiento. Puede ser practicado por individuos de <strong> todos los niveles</strong> de habilidad, con movimientos que van desde el nivel inicial hasta muy avanzados.</p>                
             <h4>PRÓXIMAS FECHAS</h4>
             </div>
             <section class="cajaTablaCursos">
