--- a/pages/blog.html
+++ b/pages/blog.html
@@ -77,9 +77,9 @@
                 </div>
                 <div class="cajaTituloYtextoBlog">   
                     <h4>PIES DESCALZOS PARA ENTRENAR</h4>
-                    <p> <strong>El calzado moderno “nos protege”, pero al mismo tiempo nos atrofia una gran cantidad de músculos de los pies, lo que conduce por un camino biomecánicamente erróneo en el resto del cuerpo.
-                    </strong><p>
-                    <p>El entrenamiento sin calzado, sobre todo en superficies naturales con desniveles, frío/calor, y en contacto con la tierra, el pasto, el sol, la arena, agrega la complejidad de obligar al cuerpo a tener que posicionarse de una manera eficiente, y aprender estas posibilidades espontáneas.
+                    <p>El <strong> calzado moderno</strong> “nos protege”, pero al mismo tiempo nos atrofia una gran cantidad de músculos de los pies, lo que conduce por un <strong> camino biomecánicamente erróneo</strong> en el resto del cuerpo.
+                   <p>
+                    <p><strong> El entrenamiento sin calzado</strong>, sobre todo en superficies naturales con desniveles, frío/calor, y en contacto con la tierra, el pasto, el sol, la arena, agrega la complejidad de obligar al cuerpo a tener que <strong> posicionarse de una manera eficiente</strong>, y aprender estas posibilidades espontáneas.
                     </p>                             
                 </div>
             </div>  
@@ -115,13 +115,13 @@
                 </div>
                 <div class="cajaTituloYtextoBlog">   
                     <h4>ENTRENAMIENTO BIOLÓGICO EVOLUTIVO - POR QUÉ ES MEJOR</h4>
-                    <p> <strong> El entrenamiento biológico evolutivo surge de la observación del movimiento en poblaciones no alcanzadas por la civilización, en los mejores deportistas de la historia, y en la optimización biológica.
-                    </strong><p>  
-                    <p>Este tipo de entrenamiento es diferente y supera al tradicional puesto que devuelve la verdadera salud al individuo desde lo más profundo, genera una biomecánica eficiente, mayor autonomía y confianza en la propia biología, y tiene un impacto natural en nuestra mejora estética. </p>              
+                    <p>  El <strong> entrenamiento biológico evolutivo</strong> surge de la observación del movimiento en poblaciones no alcanzadas por la civilización, en los mejores deportistas de la historia, y en la optimización biológica.
+                    <p>  
+                    <p>Este tipo de entrenamiento es diferente y supera al tradicional puesto que devuelve la verdadera salud al individuo desde lo más profundo, genera una <strong> biomecánica eficiente</strong>, mayor autonomía y confianza en la propia biología, y tiene un impacto natural en nuestra <strong> mejora estética</strong>. </p>              
                 </div>
             </div>  
             <div class="cajaTextoBlog"> 
-                <p>Basado en la locomoción y el movimiento original humano, y en la optimización biológica, el entrenamiento biológico evolutivo elimina el dolor y rejuvenece tu cuerpo. Pero vayamos más a lo profundo para entender más de qué se trata esta maravillosa herramienta y por qué es el mejor sistema de entrenamiento. 
+                <p>Basado en la locomoción y el <strong> movimiento original humano</strong>, y en la <strong> optimización biológica</strong>, el entrenamiento biológico evolutivo elimina el dolor y rejuvenece tu cuerpo. Pero vayamos más a lo profundo para entender más de qué se trata esta maravillosa herramienta y por qué es el mejor sistema de entrenamiento. 
                 </p> 
                 <h5> Rompiendo el paradigma: de lo SIMÉTRICO SIMULTÁNEO  a lo RECÍPROCO CONTRA-LATERAL:</h5>
                 <p>El entrenar repetitiva y exclusivamente de manera convencional (movilizar el cuerpo de manera simétrica y simultánea) puede ocasionar: falta de coordinación intersegmentaria, alteraciones y desequilibrios posturales, adherencias y deficiencia nutricional (a nivel celular), exceso de trabajo en el plano sagital, falta de nutrición cognitiva, trabaja los músculos de manera localizada generando compresión. </p>
@@ -154,16 +154,38 @@
                 </div>
                 <div class="cajaTituloYtextoBlog">   
                     <h4>LO QUE TU MÉDICO TRADICIONAL NO SABE - TOMOGRAFÍA CONE BEAM</h4>
-                    <p> <strong> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa ab possimus hic debitis, neque accusantium aperiam sunt fugit autem at.</strong><p>  
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil blanditiis harum quibusdam natus debitis tempora excepturi obcaecati at. Fuga architecto aliquid culpa perspiciatis eius ipsum ipsa delectus iusto, molestias consequuntur voluptas quidem aliquam voluptatem numquam laboriosam reiciendis velit vero minus!</p>              
+                    <p> Muchas enfermedades comienzan en la boca y pueden provocar diversas patologías en el organismo y también, enfermedades sistémicas graves. En esta nota te contamos (incluyendo casos reales) <strong> cómo tu médico tradicional aborda erróneamente diagnósticos</strong>, medica y nunca chequea con una tomografía cone beam dental donde puede estar la raíz del problema. Es importante que al control lo realice un <strong> odontólogo biológico</strong> (son los que fueron más allá de la odontología tradicional, los buscadores de la VERDAD, como decimos en Naturalflowmc), porque es quien hará una lectura correcta del informe.<p>  
+                    
                 </div>
              </div>  
             <div class="cajaTextoBlog"> 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>   
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae.<a href="https://www.imagenologiamedica.com/segundaopinion" target="_blank">Salvador Itriago</a>Lorem ipsum dolor sit amet..</p> 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque tempore aliquid, reprehenderit obcaecati voluptas accusantium, cum earum consectetur voluptate iusto perspiciatis quae repellendus deserunt, quas est vel soluta quam voluptatum blanditiis. Dicta earum laborum sunt optio tenetur, saepe assumenda at consequatur officia commodi molestiae iste nisi quia quidem hic explicabo aspernatur velit, porro magnam impedit ex beatae. Asperiores, quaerat ut.</p>
+                <p>Has tenido <strong> ataques de pánico</strong> y fuiste a un psiquiatra y te medicó? has tratado por años, <strong></strong> enfermedades del tipo autoinmune </strong> sin ver mejorías? Recurre a un odontólogo biológico porque la respuesta podría estar en <strong> infecciones dentales ocultas</strong>. Solucionando tan sólo eso, tu cuerpo vuelve a la normalidad. Hazte tu <strong> chequeo anual </strong> con una tomografía <strong> cone beam</strong> (es de baja radiación) y recurre a un especialista en el tema, para su correcta lectura.
+                </p>
+                <p>Son muy pocos los odontólogos biológicos que existen: En Buenos Aires, nuestra referente es la <strong> Dra. Mercedes Ramos Vertiz</strong>. Como dice Mercedes, “ un control odontológico completo y repetirlo periódicamente, puede ayudar a sanar diversas patologías o enfermedades sistémicas, incluso hasta puede salvar vidas. </p>    
+                <p>Existen abundantes estudios que indican una relación directa entre la mala salud oral y enfermedades importante como la <strong> diabetes</strong>, <strong> afecciones coronarias</strong>, <strong> la obesidad</strong>, etc. Se ha demostrado también, la influencia de la salud bucodental en la <strong> funcionalidad cerebral</strong>. La capacidad de percepción del cerebro se puede ver afectada por la mala salud bucal, así como la inhibición de algunas funciones del cerebro, y una relación directa entre la enfermedad periodontal y la enfermedad de <strong> Alzheimer</strong>.
+                </p>  
+                <p>Es importante entender que la boca no está aislada del resto del organismo y que chequearse con un odontólogo biológico dará respuestas que nunca hubieses imaginado ni podido abordar de otra forma para la curación verdadera. También entender que los profesionales tradicionales no tienen todas la respuestas. Este es un caso, entre los cientos de casos que detalla el <strong> Dr. Salvador Itriago</strong>:
+                </p> 
+                <p>"QUE HIZO @CECIDIAZMISLE PARA CURAR SU ARTRITIS?!
+                    QUIERES SABER LO QUE TU REUMATOLOGO NO SABE?!
+                    Y POR QUÉ @CECIDIAZMISLE CURÓ SU ARTRITIS DE 45 AÑOS DE EVOLUCIÓN Y YA NO USA MEDICAMENTOS?!
+                    Porque escuchó al Doctor @LudwigJohnson y entendió que las causas que ACTIVABAN Y ENFOCABAN A TU SISTEMA INMUNOLÓGICO “EN MODO DE ATAQUE” estaban principalmente en DOS ZONAS:
+                    1.- INTESTINO Y
+                    2.- BOCA
+                    Y COMO PUEDES ELIMINAR TU ENFERMEDAD AUTOINMUNE?!
+                    HAZ LO MISMO!
+                    ENFOCÁNDOTE EN DOS ÁREAS:
+                    1.- NUTRIENTES:
+                    Aquí es donde entra el balance individual de cada paciente, seguir los protocolos del Doctor @LudwigJohnson ELIMINANDO infecciones gastrointestinales subclínicas (sin manifestaciones gastrointestinales) que producen toxinas, e incluyendo, eliminando, balanceando y restituyendo NUTRIENTES, y así la salud de tu tracto gastrointestinal.
+                    2.- HACIÉNDOTE TU “CBCT DENTAL”: Hazte tu Tomografía Dental llamada CBCT DENTAL (Cone Beam), para detectar las lesiones dentales que “NO” están en el radar de la Odontología, Y QUE SÓLO ESTÁN EN LOS PROTOCOLOS DE LA MEDICINA ORAL.
+                    EN CONCLUSIÓN:
+                    1.- Restituye y mantén tu salud GastroIntestinal con Protocolos Modernos.
+                    2.- Descarta ó Detecta lesiones insospechadas dentales con un CBCT y obtén una evaluación con Protocolos Modernos.
+                    </p> 
+                    <p>TIENES LESIONES DENTALES INSOSPECHADAS?!</p>
+                    <p>NO LO SABEMOS!</p> 
+                    <p> HAZTE TU CBCT DENTAL"</p>                     
+                    <p>Publicado el 05 enero 2023</p>    
             </div> 
             <div class="divCalltoaction compartir"><a  href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
             </div>                       
