--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label text-start">Ingresa tu email</label>
                           <input type="email" class="form-control input" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text">También puedes contactarnos a través de nuestras redes sociales</div>
+                          <div id="emailHelp" class="form-text"></div>
                         </div>
                         <div class="mb-3">
                           <label for="exampleInputPassword1" class="form-label">Ingresa tu nombre</label>
@@ -100,7 +100,7 @@
                         <div class="accordion-item letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed   bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Soy mayor y estoy fuera de forma. ¿Es esto realmente para mí?
+                            SOY MAYOR Y ESTOY FUERA DE FORMA. ¿ES ESTO REALMENTE PARA MI?
                             </button>
                           </h2>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -110,7 +110,7 @@
                         <div class="accordion-item  letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                              ¿Puede esto ayudar a recuperarme de una lesión?
+                              ¿PUEDE ESTO AYUDAR A RECUPERARME DE UNA LESIÓN?
                             </button>
                           </h2>
                           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -121,7 +121,7 @@
                         <div class="accordion-item  letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingThree">
                             <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                              Días y horarios de entrenamientos
+                             ¿CUÁLES SON LOS DIAS Y HORARIOS DE ENTRENAMIENTO?
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
@@ -131,7 +131,7 @@
                         <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingFour">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                                ¿En Naturalflowmc, se construye músculo?
+                                ¿EN NATURALFLOWMC, SE CONSTRUYE MÚSCULO?
                               </button>
                             </h2>
                             <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
@@ -142,7 +142,7 @@
                           <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingFive">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                                ¿Qué son los patrones funcionales?
+                                ¿QUÉ SON LOS PATRONES FUNCIONALES?
                               </button>
                             </h2>
                             <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
@@ -152,7 +152,7 @@
                           <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingSix">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                                ¿Esto me hará más fuerte, más en forma y más delgado?
+                                ¿ESTO ME HARÁ MÁS FUERTE, MÁS EN FORMA Y MÁS DELGADO?
                               </button>
                             </h2>
                             <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
