--- a/pages/nutricion.html
+++ b/pages/nutricion.html
@@ -70,8 +70,9 @@
         <section class="cajaCurso">
             <div>
                 <h1>CURSO DE NUTRICIÓN - BUENOS AIRES </h1>
-                <p><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis quasi voluptatibus minus placeat obcaecati, magnam quo recusandae voluptatum omnis quos.</strong></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatibus perspiciatis deserunt ratione eius, reprehenderit expedita, numquam dolor accusantium dicta officia a aperiam repellendus laudantium minus quia! Veritatis, fugiat voluptas id numquam, saepe nobis dolores quaerat neque molestias, rerum aperiam. Asperiores voluptatem unde incidunt a? Quis atque harum ad nam voluptate perferendis, perspiciatis non aliquam exercitationem laborum porro, voluptatem quos.</p>
+                <p>Desde una <strong> perspectiva evolutiva</strong> sabemos que la discordancia evolutiva es lo que provoca comportamientos tóxicos que afectan al organismo.¿Será el organismo que funciona de forma alterada o es un ajuste coherente al entorno?
+                La propuesta para resolver esta paradoja en cada uno de nuestros cursos sobre nutrición es crear un plan de acción que nos ayude a retornar a la reancestría abordando los <strong> últimos avances en la investigación</strong>. Nuestros programas están diseñados por <strong> profesionales de la nutrición VERDADERA</strong>, es decir aquellos que fueron más allá de los conocimientos universitarios, <strong> rompiendo paradigmas</strong> para complementar de manera inteligente este hermoso camino que es el de <strong> saber nutrirse</strong>.
+                </p>                
                 <h4>PRÓXIMAS FECHAS</h4>
             </div>
             <section class="cajaTablaCursos">
