prueba sobre boton introduccion para sacar azul

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>El <strong> entrenamiento biológico evolutivo</strong> surge de la observación del movimiento en <strong> poblaciones no alcanzadas por la civilización</strong>, en <strong> los mejores deportistas de la historia</strong>, y en la <strong> optimización biológica.</strong></p>              
             <p>Este tipo de entrenamiento es diferente y supera al tradicional puesto que devuelve la verdadera salud al individuo desde lo más profundo, genera una <strong> biomecánica eficiente</strong>, mayor autonomía y confianza en la propia biología, y tiene un impacto natural en nuestra <strong> mejora estética</strong>... </p> 
             </div>
-            <div class="divCalltoaction"><a  href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Leer más</h3></a>
+            <div class="divCalltoaction"><a class="botonContacto" href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Leer más</h3></a>
             </div>
         </section>                           
         <section class="sectionProximosCursos">
