--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -91,7 +91,7 @@
                           <input type="checkbox" class="form-check-input bg-white border border border-2" id="exampleCheck1">
                           <label class="form-check-label" for="exampleCheck1">Quiero recibir el Boletín de Novedades</label>
                         </div class="divCtaContacto">
-                        <button type="submit" class="btn calltoaction">ENVIAR CONSULTA</button>
+                        <button type="submit" class="btn calltoaction"> <a class="botonContacto" href="">ENVIAR CONSULTA</a></button>
                       </form>
                 </div>
                 <div class="col-xs-12 col-lg-6 letraPisaBootstrap">
@@ -165,7 +165,7 @@
             </div>            
             <div class="row d-flex justify-center text-start">
                 <div class="col-12 p-2 m-auto letraPisaBootstrap mapa">
-                    <h3 class="tituloMapa">UBICACION</h3>
+                    <h3 class="tituloMapa">UBICACIÓN</h3>
                     <iframe  src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6571.447041296786!2d-58.43201394110648!3d-34.56055502491439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1675257664695!5m2!1ses-419!2sar" width="700" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>                
             </div>
