correccion azul en botones index mobile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </section>
             <section class="header2">            
                 <div class="divSlogan"><h2 class="animate__animated animate__rollIn">CONOCE, CUIDA Y ENTRENA TU CUERPO</h2></div>
-                <div class="divCalltoaction"><a  href="./pages/contacto.html"><h3 class="calltoaction">ENTRENA CONMIGO</h3></a></div>             
+                <div class="divCalltoaction"><a class="botonContacto" href="./pages/contacto.html"><h3 class="calltoaction">ENTRENA CONMIGO</h3></a></div>             
             </section>
         </div>
     </header>
@@ -86,19 +86,19 @@
                     <div>
                         <img src="./img/fotoCursoAnimal - copia.jpg" alt="Curso de Animal Flow - Buenos Aires" width="350" height="250">
                     </div>    
-                    <div class="divCalltoaction"><a  href="./pages/animalflow.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
+                    <div class="divCalltoaction"><a class="botonContacto" href="./pages/animalflow.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>                             
                 </div> 
                 <div class="proximoCurso">
                     <h4>NUTRICIÓN - BUENOS AIRES</h4>
                     <img src="./img/cursoNutricion - copia.jpg" alt="Curso de Nutrición - Buenos Aires" width="350" height="250">
-                    <div class="divCalltoaction"><a  href="./pages/nutricion.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
+                    <div class="divCalltoaction"><a class="botonContacto" href="./pages/nutricion.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>                       
                 </div>  
                 <div class="proximoCurso">
                     <h4>KETTLEBELLS - BUENOS AIRES</h4>
                     <img src="./img/cursoPesasRusasBuenosAires3 - copia.jpg" alt="Curso de Pesas Rusas - Buenos Aires" width="350" height="250">
-                    <div class="divCalltoaction"><a  href="./pages/kettlebells.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
+                    <div class="divCalltoaction"><a class="botonContacto" href="./pages/kettlebells.html"><h3 class="calltoaction calltoactionSmall botonProximosCursos">VER PRÓXIMAS FECHAS</h3></a>
                     </div>            
                 </div>      
             </div>    
@@ -139,7 +139,7 @@
                     <p>El <strong> entrenamiento sin calzado</strong>, sobre todo en superficies naturales con desniveles, frío/calor, y en contacto con la tierra, el pasto, el sol, la arena, agrega la complejidad de obligar al cuerpo a tener que <strong>posicionarse de una manera  eficiente</strong>, y aprender estas posibilidades espontáneas...
                     </p>        
             </div>                
-            <div class="divCalltoaction"><a  href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Ir a BLOG</h3></a>
+            <div class="divCalltoaction"><a class="botonContacto" href="./pages/blog.html"><h3 class="calltoaction calltoactionSmall">Ir a BLOG</h3></a>
             </div>            
         </section>                                    
     </main>  
