quite azul de resto de botones mobile y agregue wireframe

--- a/pages/about.html
+++ b/pages/about.html
@@ -83,7 +83,7 @@
                 <p>Equipo Naturalflowmc </p>
             </div>
             <div>
-                <div class="divCalltoaction"><a  href="../pages/contacto.html"><h3 class="calltoaction">CONTÁCTANOS</h3></a>
+                <div class="divCalltoaction"><a class="botonContacto" href="../pages/contacto.html"><h3 class="calltoaction">CONTÁCTANOS</h3></a>
                 </div> 
             </div>
         </section>
