--- a/pages/blog.html
+++ b/pages/blog.html
@@ -105,7 +105,7 @@
                 </p>
                 <p>Publicado el 22 febrero 2023</p>
             </div> 
-            <div class="divCalltoaction compartir"><a  href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
+            <div class="divCalltoaction compartir"><a class="botonContacto" href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
             </div>                       
         </section>
         <section class="cajaBlog">
@@ -144,7 +144,7 @@
                 </p> 
                 <p>Publicado el 01 febrero 2023</p>
             </div> 
-            <div class="divCalltoaction compartir"><a  href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
+            <div class="divCalltoaction compartir"><a class="botonContacto" href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
             </div>                       
         </section>
         <section class="cajaBlog">
@@ -187,7 +187,7 @@
                     <p> HAZTE TU CBCT DENTAL"</p>                     
                     <p>Publicado el 05 enero 2023</p>    
             </div> 
-            <div class="divCalltoaction compartir"><a  href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
+            <div class="divCalltoaction compartir"><a class="botonContacto" href=""><h3 class="calltoaction calltoactionSmall">Compartir</h3></a>
             </div>                       
         </section>
     </main>   
